# create-mini-pyproj

./: .gitignore  cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: test.yml
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  pyproject.toml  requirements.txt
